--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string-array name="india_states">
+        <item>State</item>
         <item>Andaman and Nicobar Islands</item>
         <item>Andhra Pradesh</item>
         <item>Arunachal Pradesh</item>
@@ -42,6 +43,7 @@
         <item>West Bengal</item>
     </string-array>
     <string-array name="indian_cities">
+        <item>City</item>
         <item>Agartala</item>
         <item>Agra</item>
         <item>Agumbe</item>
