empty cart case added to layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="empty_cart">Your cart is Empty</string>
     <string name="call_executive">You can call our executive for further information</string>
     <string name="app_name">FarmerApp</string>
     <string name="Rs">\u20B9</string>
