--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,105 @@
 <resources>
     <string name="empty_cart">Your cart is Empty</string>
-    <string name="call_executive">You can call our executive for further information</string>
     <string name="app_name">FreshHut</string>
     <string name="Rs">\u20B9</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="book_slot">Book Slot</string>
+    <string name="manual">Manual</string>
+    <string name="cc_address">CC Address</string>
+    <string name="date">Date</string>
+    <string name="free_home_pickup">Free Home Pickup</string>
+    <string name="address">Address</string>
+    <string name="add_new_address">Add new Address</string>
+    <string name="place_request">Place Request</string>
+    <string name="cart">Cart</string>
+    <string name="coupon_available">Coupon Available</string>
+    <string name="applied">Applied</string>
+    <string name="coupon">Coupon</string>
+    <string name="tax_and_charges">Tax and Charges</string>
+    <string name="transportaion_and_labour">Transportation and Labour</string>
+    <string name="total">Total</string>
+    <string name="book_slot_button">Book Slot</string>
+    <string name="choose_language">Choose Language</string>
+    <string name="mobile_number_hint">Mobile Number</string>
+    <string name="login_or_register">Login or Register</string>
+    <string name="locating">Locating...</string>
+    <string name="profile_name_hint">Name</string>
+    <string name="profile_kyc_hint">XXXXXXXX (Optional)</string>
+    <string name="profile_alternate_mobile_no">Alternate Mobile No.</string>
+    <string name="profile_address_hint">Address</string>
+    <string name="profile_address">Address</string>
+    <string name="profile_name">Name</string>
+    <string name="profile_kyc">KYC</string>
+    <string name="profile_verified">verified</string>
+    <string name="profile_mr">Mr.</string>
+    <string name="profile_contact">Contact</string>
+    <string name="profile_save_changes">Save Changes</string>
+    <string name="requests">Requests</string>
+    <string name="request">Request</string>
+    <string name="request_sell_request">Sell Request</string>
+    <string name="request_slot">Slot</string>
+    <string name="request_item">Item</string>
+    <string name="request_units">Units</string>
+    <string name="request_price">Price</string>
+    <string name="request_call_executive">You can call our executive for further information</string>
+    <string name="request_cancel_request">Cancel Request</string>
+    <string name="search_query_hint">Search</string>
+    <string name="search_toolbar_title">FreshHut</string>
+    <string name="select_crops">Select Crops</string>
+    <string name="sell_query_hint">Search</string>
+    <string name="sell_fruits">Sell Fruits</string>
+    <string name="sell_vegetables">Sell Vegetables</string>
+    <string name="splash_title">FRESH HUT</string>
+    <string name="otp_resend">Resend OTP</string>
+    <string name="otp_verify">Verify</string>
+    <string name="otp_title_part_1">FRESH</string>
+    <string name="otp_title_part_2">HUT</string>
+    <string name="address_sheet_current_location">Current Location</string>
+    <string name="address_sheet_address_line_1_hint">Address Line 1</string>
+    <string name="address_sheet_address_line_2_hint">Address Line 2</string>
+    <string name="address_sheet_landmark_hint">Landmark</string>
+    <string name="address_sheet_city_hint">AddressCity</string>
+    <string name="address_sheet_state_hint">State</string>
+    <string name="address_sheet_pincode_hint">Pincode</string>
+    <string name="address_sheet_confirm_location">Confirm Location</string>
+    <string name="change_quantity_sheet_done">Done</string>
+    <string name="change_quantity_quantity_hint">Quantity</string>
+    <string name="main_query_hint">Search</string>
+    <string name="main_vegetables_off">Vegetables\n 50% off</string>
+    <string name="main_fruits_off">Fruits\n 40% off</string>
+    <string name="main_crops_off">Crops\n 35% off</string>
+    <string name="main_sell_fruits">Sell Fruits</string>
+    <string name="main_sell_vegetables">Sell Vegetables</string>
+    <string name="main_sell_crops">Sell Crops</string>
+    <string name="main_suggested_for_you">Suggested For You</string>
+    <string name="payment_no_payment">No Payments</string>
+    <string name="register_address">Address</string>
+    <string name="register_address_line_1_hint">Address Line 1</string>
+    <string name="register_address_line_2_hint">Address Line 2</string>
+    <string name="register_landmark_hint">Landmark (Optional)</string>
+    <string name="register_pincode_hint">Pincode</string>
+    <string name="register_your_location">Your Location</string>
+    <string name="register_next">Next</string>
+    <string name="register_details">Details</string>
+    <string name="register_name_hint">Name</string>
+    <string name="register_alternate_mob_hint">Alternate Number (Optional)</string>
+    <string name="register_skip">Skip</string>
+    <string name="register_profile_photo">Profile Photo</string>
+    <string name="request_list_date">Request Date</string>
+    <string name="request_list_sell_status">Sell Status</string>
+    <string name="request_list_request_id">Request Id</string>
+    <string name="request_list_collection">Collection</string>
+    <string name="request_list_slot">Slot</string>
+    <string name="add_to_cart">Add to Cart</string>
+    <string name="no_gps_message">Please turn on location.</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_requests">Requests</string>
+    <string name="menu_payments">Payments</string>
+    <string name="menu_about">About</string>
+    <string name="menu_change_langauge">Change Language</string>
+    <string name="menu_logout">Logout</string>
     <string-array name="slot_names">
         <item>Slot 1</item>
         <item>Slot 2</item>
@@ -24,184 +118,25 @@
     </string-array>
     <string-array name="india_states">
         <item>State</item>
-        <item>Andaman and Nicobar Islands</item>
-        <item>Andhra Pradesh</item>
-        <item>Arunachal Pradesh</item>
-        <item>Assam</item>
-        <item>Bihar</item>
-        <item>Chandigarh</item>
-        <item>Chhattisgarh</item>
-        <item>Dadra and Nagar Haveli</item>
-        <item>Daman and Diu</item>
         <item>Delhi</item>
-        <item>Goa</item>
-        <item>Gujarat</item>
+        <item>U.P.</item>
         <item>Haryana</item>
-        <item>Himachal Pradesh</item>
-        <item>Jammu and Kashmir</item>
-        <item>Jharkhand</item>
         <item>Karnataka</item>
-        <item>Kerala</item>
-        <item>Lakshadweep</item>
-        <item>Madhya Pradesh</item>
         <item>Maharashtra</item>
-        <item>Manipur</item>
-        <item>Meghalaya</item>
-        <item>Mizoram</item>
-        <item>Nagaland</item>
-        <item>Orissa</item>
-        <item>Pondicherry</item>
-        <item>Punjab</item>
-        <item>Rajasthan</item>
-        <item>Sikkim</item>
-        <item>Tamil Nadu</item>
         <item>Telangana</item>
-        <item>Tripura</item>
-        <item>Uttaranchal</item>
-        <item>Uttar Pradesh</item>
-        <item>West Bengal</item>
     </string-array>
     <string-array name="indian_cities">
         <item>City</item>
-        <item>Agartala</item>
-        <item>Agra</item>
-        <item>Agumbe</item>
-        <item>Ahmedabad</item>
-        <item>Aizawl</item>
-        <item>Ajmer</item>
-        <item>Allahabad</item>
-        <item>Alleppey</item>
-        <item>Almora</item>
-        <item>Amarnath</item>
-        <item>Amritsar</item>
-        <item>Anantagir</item>
-        <item>Aurangabad</item>
-        <item>Ayodhya</item>
-        <item>Badrinath</item>
-        <item>Bangalore</item>
-        <item>Baroda</item>
-        <item>Bastar</item>
-        <item>Bhagalpur</item>
-        <item>Bhilai</item>
-        <item>Bhimtal</item>
-        <item>Bhopal</item>
-        <item>Bhubaneswar</item>
-        <item>Bhuj</item>
-        <item>Bidar</item>
-        <item>Bilaspur</item>
-        <item>Bodh Gaya</item>
-        <item>Calicut</item>
-        <item>Chail</item>
-        <item>Chamba</item>
-        <item>Chandigarh</item>
-        <item>Chennai</item>
-        <item>Cherai</item>
-        <item>Cherrapunji</item>
-        <item>Chidambaram</item>
-        <item>Chikhaldara Hills</item>
-        <item>Chopta</item>
-        <item>Coimbatore</item>
-        <item>Coonoor</item>
-        <item>Coorg</item>
-        <item>Corbett National Park</item>
-        <item>Cotigao Wild Life Sanctuary</item>
-        <item>Cuttack</item>
-        <item>Dadra and Nagar Haveli</item>
-        <item>Dalhousie</item>
-        <item>Daman and Diu</item>
-        <item>Darjeeling</item>
-        <item>Dehradun</item>
         <item>Delhi</item>
-        <item>Devikulam</item>
-        <item>Dhanaulti</item>
-        <item>Dharamashala</item>
-        <item>Dindigul</item>
-        <item>Dudhwa National Park</item>
-        <item>Dwaraka</item>
-        <item>Faridabad</item>
-        <item>Gandhinagar</item>
-        <item>Gangtok</item>
-        <item>Goa</item>
-        <item>Gulmarg</item>
-        <item>Gurgaon</item>
-        <item>Guruvayoor</item>
-        <item>Guwahati</item>
-        <item>Gwalior</item>
-        <item>Hampi</item>
-        <item>Haridwar</item>
-        <item>Hogenakkal</item>
-        <item>Hyderabad</item>
-        <item>Idukki</item>
-        <item>Imphal</item>
-        <item>Indore</item>
-        <item>Itangar</item>
-        <item>Jabalpur</item>
-        <item>Jaipur</item>
-        <item>Jaisalmer</item>
-        <item>Jalandhar</item>
-        <item>Jammu</item>
-        <item>Jamshedpur</item>
-        <item>Jodhpur</item>
-        <item>Kanpur</item>
-        <item>Kanyakumari</item>
-        <item>Karwar</item>
-        <item>Khajuraho</item>
-        <item>Kochi</item>
-        <item>Kolkata</item>
-        <item>Kullu</item>
-        <item>Kumaon</item>
-        <item>Kurukshetra</item>
-        <item>Lakshadweep</item>
-        <item>Lucknow</item>
-        <item>Ludhiana</item>
-        <item>Madurai</item>
-        <item>Mahabalipuram</item>
-        <item>Mangalore</item>
         <item>Mumbai</item>
-        <item>Munnar</item>
-        <item>Mussoorie</item>
-        <item>Mysore</item>
-        <item>Nahsik</item>
-        <item>Nalanda</item>
-        <item>Ooty</item>
-        <item>Pahalgam</item>
-        <item>Palakkad</item>
-        <item>Panchgani</item>
-        <item>Patna</item>
-        <item>Pithoragarh</item>
-        <item>Pondicherry</item>
         <item>Pune</item>
-        <item>Puri</item>
-        <item>Pushkar</item>
-        <item>Raipur</item>
-        <item>Rajgir</item>
-        <item>Rameshwaram</item>
-        <item>Ranchi</item>
-        <item>Ranthambore</item>
-        <item>Rishikesh</item>
-        <item>Rourkela</item>
-        <item>Sanchi</item>
-        <item>Saputara</item>
-        <item>Shillong</item>
-        <item>Shimla</item>
-        <item>Srinagar</item>
-        <item>Surat</item>
-        <item>Tezpur</item>
-        <item>Thanjavur</item>
-        <item>Thiruvananthapuram</item>
-        <item>Thrissur</item>
-        <item>Tirunelveli</item>
-        <item>Tirupati</item>
-        <item>Trichy</item>
-        <item>Udaipur</item>
-        <item>Ujjain</item>
-        <item>Vaishali</item>
-        <item>Varanasi</item>
-        <item>Varkala and Ayurveda</item>
-        <item>Vijayawada</item>
-        <item>Vishakhapatnam</item>
-        <item>Vrindhavan</item>
-        <item>Warangal</item>
-        <item>Wayanad</item>
+        <item>Chennai</item>
+        <item>Kolkata</item>
+        <item>Bengaluru</item>
+        <item>Hyderabad</item>
+        <item>Gurugram</item>
+        <item>Noida</item>
+        <item>Gaziabad</item>
+        <item>Faridabad</item>
     </string-array>
 </resources>
