--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -39,13 +39,16 @@
     <string name="profile_saving">सेविंग...</string>
     <string name="requests">रिक्वेस्ट्स</string>
     <string name="request">रिक्वेस्ट</string>
+    <string name="request_no_requests">नो रिक्वेस्ट्स</string>
     <string name="request_sell_request">सेल्ल रिक्वेस्ट्स</string>
     <string name="request_slot">स्लॉट :</string>
     <string name="request_item">आइटम</string>
     <string name="request_units">यूनिट्स</string>
     <string name="request_price">कीमत</string>
     <string name="request_call_executive">अधिक जानकारी के लिए आप हमारी कार्यकारिणी को कॉल कर सकते हैं</string>
-    <string name="request_cancel_request">कैंसिल रिक्वेस्ट</string>
+    <string name="request_cancel_request">रद्द करें</string>
+    <string name="request_cancelled">रद्द</string>
+    <string name="request_cancelling">रद्द कर रहे है...</string>
     <string name="search_query_hint">खोजें</string>
     <string name="search_toolbar_title">FreshHut</string>
     <string name="select_crops">फसलों का चयन</string>
