improvements in item card

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -70,14 +70,16 @@
     <string name="address_sheet_state_hint">राज्य</string>
     <string name="address_sheet_pincode_hint">पिन कोड</string>
     <string name="address_sheet_confirm_location">स्थान की पुष्टि करें</string>
-    <string name="change_quantity_sheet_done">पूर्ण</string>
+    <string name="change_quantity_sheet_update">अपडेट करें</string>
+    <string name="change_quantity_remove">रिमूव करें</string>
     <string name="change_quantity_quantity_hint">मात्रा</string>
     <string name="main_location_empty">आपका स्थान अनुपलब्ध है</string>
     <string name="main_current_location">वर्तमान स्थान</string>
+    <string name="main_max_limit_reached">अधिकतम सीमा</string>
     <string name="main_query_hint">खोजें</string>
-    <string name="main_vegetables_off">सब्जियां\n 50% की छूट</string>
-    <string name="main_fruits_off">फल\n 35% की छूट</string>
-    <string name="main_crops_off">फसलें\n 35% की छूट</string>
+    <string name="main_vegetables_off">सब्जियां\n 50% EXTRA</string>
+    <string name="main_fruits_off">फल\n 35% EXTRA</string>
+    <string name="main_crops_off">फसलें\n 35% EXTRA</string>
     <string name="main_sell_fruits">फल बेचे</string>
     <string name="main_sell_vegetables">सब्जियां बेचे</string>
     <string name="main_sell_crops">फसलें बेचे</string>
