--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,17 +70,19 @@
     <string name="address_sheet_state_hint">State</string>
     <string name="address_sheet_pincode_hint">Pincode</string>
     <string name="address_sheet_confirm_location">Confirm Location</string>
-    <string name="change_quantity_sheet_done">Done</string>
+    <string name="change_quantity_sheet_update">Update</string>
+    <string name="change_quantity_remove">Remove</string>
     <string name="change_quantity_quantity_hint">Quantity</string>
     <string name="main_location_empty">Your Location is Unavailable</string>
     <string name="main_current_location">Current Location</string>
     <string name="main_query_hint">Search</string>
-    <string name="main_vegetables_off">Vegetables\n 50% off</string>
-    <string name="main_fruits_off">Fruits\n 40% off</string>
-    <string name="main_crops_off">Crops\n 35% off</string>
+    <string name="main_vegetables_off">Vegetables\n 50% EXTRA</string>
+    <string name="main_fruits_off">Fruits\n 40% EXTRA</string>
+    <string name="main_crops_off">Crops\n 35% EXTRA</string>
     <string name="main_sell_fruits">Sell Fruits</string>
     <string name="main_sell_vegetables">Sell Vegetables</string>
     <string name="main_sell_crops">Sell Crops</string>
+    <string name="main_max_limit_reached">Maximum Limit reached</string>
     <string name="main_suggested_for_you">Suggested For You</string>
     <string name="payment_no_payment">No Payments</string>
     <string name="register_address">Address</string>
