--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
+    <string name="pay_settings">Settings</string>
+    <string name="pd_save">Save Details</string>
+    <string name="pd_ifsc">IFSC Code</string>
+    <string name="pd_acc_hol_name">Account Holder Name</string>
+    <string name="pd_acc_no">Account Number</string>
+    <string name="pd_bank_details">Bank Details</string>
+    <string name="pd_verify">Verify</string>
+    <string name="pd_title">Payment Details</string>
     <string name="empty_cart">Your cart is Empty</string>
     <string name="app_name">FreshHut</string>
     <string name="Rs">\u20B9</string>
